--- a/puzzle.html
+++ b/puzzle.html
@@ -39,7 +39,6 @@
                         <button id="btnRule" type="button" class="btn" onclick="rules();">Rules</button>
                         <button id="newPhoto" type="button" class="btn">Another Photo</button>
                         <!-- <button id="btnReplay" type="button" class="btn" onclick="about();">About</button> -->
-                        <button id="gameOver" type="button" class="btn" style="display: none;">Oh, What's This?</button>
                     </div>
                 </div>
             </div>
@@ -54,6 +53,7 @@
                 Time Taken: <span class="timeCount">0</span> seconds<br />
                 <div>
                     <button type="button" onclick="window.location.reload(true);">Play Again</button>
+                    <button id="gameOver" type="button" class="btn"><a style="text-decoration: none; color: black;" target="_blank" href="http://aidanrafferty.com">Oh, What's This?</a></button>
                 </div>
             </div>
         </div>
